# manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  SIGNERS.md  pyproject.toml  setup.py
.github/: release-please-config.json
.github/actions/test/: action.yml
.github/cla/: comment-template.md
.github/workflows/: ci.yml  cla-status.yml  cla.yml  lock-merged-prs.yml  misspell.yml  release.yml
examples/: example.py  migration_example.py
manager/: __init__.py  cli.py
manager/templates/: advanced.jinja  chat_completions.jinja  chatwithtools.jinja  responses.jinja
scripts/: commit-msg  rewrite_msg.sh
signatures/: cla.json
signatures/users/: bniladridas.json
tests/: testmanager.py
