# SPDX-License-Identifier: MIT

[project]
name = "manager"
version = "0.1.0"
description = "A library for generating xAI API tool call templates using Jinja2"
authors = [{name = "opencode"}]
license = "MIT"
dependencies = ["jinja2"]
requires-python = ">=3.8"
 [project.optional-dependencies]
 test = ["pytest"]
 [project.scripts]
 manager-cli = "manager.cli:main"

  [tool.pytest.ini_options]
 python_files = ["testmanager.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "--cov=manager --cov-report=term-missing"

 [tool.setuptools.packages.find]
 exclude = ["signatures"]
